<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:onClick="listSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/songs" />

    <Button
        android:id="@+id/button2"
        android:onClick="searchSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="54dp"
        android:text="@string/search_song" />

    <Button
        android:id="@+id/button3"
        android:onClick="createSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="33dp"
        android:text="@string/create_song" />

</RelativeLayout>