<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateSong" >

    <EditText
        android:id="@+id/editTextName"
        android:hint="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextUrl"
        android:hint="@string/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:inputType="textUri"
        android:ems="10" />

    <Button
        android:id="@+id/button1"
        android:onClick="createSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUrl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/create_song" />

</RelativeLayout>